# Kahlout-bot

./: .replit  data.xlsx  keep_alive.py  log.txt  main.py  pyproject.toml  requirements.txt
